resources/css/style.css
/*-------------------------------------------------------*/
/*INITIAL SETUP*/
/*-------------------------------------------------------*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    /*background-color: #fff;*/
    color: #555;
    /*overall fontsize of the project*/
    font-size: 20px;
    text-rendering: optimizeLegibility;
    overflow: hidden;
    height: 100%;
}

body {
    overflow: auto;
    height: 100%;
    font-family: 'Lato', sans-serif !important;
    font-weight: 300;
}

/*clearing float*/
.clearfix {zoom: 1}
.clearfix:after {
    content: '.';
    clear: both;
    display: block;
    height: 0;
    visibility: hidden;
}

/*-------------------------------------------------------*/
/*HEADER FORMATTING*/
/*-------------------------------------------------------*/
h1, h2, h3 {
    font-weight: 300;
    /*text-transform: uppercase;*/
}

h1 {
    margin-top: 0;
    margin-bottom: 20px;
    color: #fff;
    /*relative due to responsiveness. since html global is 20px, 200% is 40px*/
    font-size: 420%;
    word-spacing: 4px;
    letter-spacing: 1px;
}

h2 {
    font-size: 180%;
    word-spacing: 2px;
    text-align: center;
    margin-bottom: 30px;
    letter-spacing: 1px;
}

h3 {
    font-size: 110%;
    margin-bottom: 15px;
}

/*putting content just with css*/
h2:after {
    display: block;
    height: 2px;
    background-color: #d63031;
    content: " ";
    width: 100px;
    margin: 0 auto;
    margin-top: 20px;
}

/*About page*/
.sub-page-title {
    text-align: center;
    margin-top: 40px;
    cursor: default;
    margin-bottom: 80px;
}

.sub-page-title h1 {
    font-weight: 400;
    margin-top: 0;
    margin-bottom: 20px;
    color: #fff;
    /*relative due to responsiveness. since html global is 20px, 200% is 40px*/
    font-size: 200%;
    word-spacing: 4px;
    letter-spacing: 1px;
}

.sub-page-title h1:after {
    display: block;
    height: 2px;
    background-color: #d63031;
    content: " ";
    width: 100px;
    margin: 0 auto;
    margin-top: 15px;
}


/*homepage footer*/
.footer-info {
    text-align: center;
    position: absolute;
    width: 100%;
    bottom: 0;
}

/*Games page*/
.sub-page-title h1.games:after {
    width: 55px;
}

/*-------------------------------------------------------*/
/*REUSABLE COMPONENTS*/
/*-------------------------------------------------------*/

.row {
    max-width: 1140px;
    margin: 0 auto;
}

section {
    padding: 80px 0;
}

nav {
    position: relative;
    z-index: 1000;
}

/*-------------------------------------------------------*/
/*HEADER*/
/*-------------------------------------------------------*/

header {
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/background.jpg);
    /*Background stays still when you scroll*/
    background-attachment: fixed; 
    background-size: cover;
    background-position: center;
    height: 100vh;
}

.header-title {
    text-align: center;
}

.header-interior {
    vertical-align: middle;
    display: inline-block;
    height: 19%;
    position: absolute;
    top: 38%;
    bottom: 30%;
    margin: auto;
    left: 8%;
    right: 8%;
}

.header-logos {
    padding-left: 60px;
}

header.about {
    background-image: none;
}

header ion-icon {
    color: #fff;
    font-size: 25px;
    margin-right: 50px;
    margin-top: 10px;
    transition: color 0.2s;
}

header ion-icon:hover {
    color: #d63031;
}

.logo {
    height: 106px;
    width: auto;
    float: left;
    margin-top: 20px;
}


/*-------------------------------------------------------*/
/*NAVIGATION*/
/*-------------------------------------------------------*/

.navbar {
    padding: 0;
}

.navbar-toggler {
    margin-top: 1.2rem;
}

.navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 0px;
    padding-left: 0px;
}

.main-nav li {
    margin-top: 17px;
    margin-left: 40px;
}

.main-nav li a:link, .main-nav li a:visited {
    border-bottom: 2px solid transparent;
    transition: border-bottom 0.2s, color 0.2s;
}

.main-nav li a:hover, .main-nav li a:active {
    border-bottom: 2px solid #d63031;
    cursor: pointer;
}

/*-------------------------------------------------------*/
/*BODY*/
/*-------------------------------------------------------*/
body.about {
    background-color: #000000;
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/background.jpg);
    /*Background stays still when you scroll*/
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    height: 100vh;
}

/*-------------------------------------------------------*/
/*GAMES HTML*/
/*-------------------------------------------------------*/

.section-games {
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/background-temp.jfif);
    /*Background stays still when you scroll*/
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    height: 100vh;
    padding: 0;
}

.game-titles {
    margin: 0 100px;
}

.game_tile {
    width: 256px;
    height: 256px;
    margin-right: 12px;
    margin-left: 12px;
    margin-bottom: 10px;
    border-radius: 10px;
    opacity: 0.8;
    transition: transform 0.2s;
}

.game-titles .row input:hover {
    transform: scale(1.08);
}

.game-titles .row input:active {
    transform: scale(1.055);
}
.col-sm {
    text-align: center;
}

/*-------------------------------------------------------*/
/*ABOUT PAGE*/
/*-------------------------------------------------------*/
.about-contents {
    text-align: justify;
    color: white;
    padding-left: 50px;
    padding-right: 50px;
    margin-top: 50px;
    margin-bottom: 50px;
}

/*-------------------------------------------------------*/
/*FOOTER*/
/*-------------------------------------------------------*/

.footer-info h6 {
    color: rgba(255, 255, 255, 0.685);
    font-weight: 300;
}

